# rapidjson_example

./: CMakeLists.txt  README.md  runtest.sh
json/: array.json  config.json  config.schema.json  config_ng.json
src/: CMakeLists.txt  rapidjson_read.cpp  rapidjson_read_array.cpp  rapidjson_read_from_file.cpp  rapidjson_schemavalidator.cpp  rapidjson_write.cpp
